[package]
name = "tokenomic_contract"
version = "0.1.0"
edition = "2021"

[dependencies]
ink = { version = "4.0.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2", default-features = false, features = [
    "derive",
], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
pink-extension = { version = "0.4.1", default-features = false, features = [
    "ink-as-dependency",
] }
pink-subrpc = { version = "0.4.2", default-features = false }
serde_json = { version = "1.0.94", default-features = false, features = [
    "alloc",
] }
chrono = { version = "0.4.24", default-features = false }
fixed = { version = "1.23.1", default-features = false }
fixed-macro = { version = "1.2.0", default-features = false }

[dev-dependencies]
pink-extension-runtime = "0.4.0"

[lib]
name = "tokenomic"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "pink-subrpc/std",
]
ink-as-dependency = []
